--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "dependencies": {
     "discord.js": "11.3.2",
     "request": "2.81.0",
-    "ytdl-core": "0.20.4",
-    "opusscript": "0.0.6",
-    "queue": "4.4.2",
-    "ffmpeg-binaries": "3.2.2-3",
-    "get-youtube-id": "1.0.0",
-    "youtube-info": "1.2.0",
-    "simple-youtube-api": "5.0.2"
+    "fs": "0.0.1-security",
+    "moment": "2.22.2",
+    "jimp": "0.3.5",
+    "canvas": "1.6.11"
   }
 }
